# sseclient

./: .gitignore  .hgignore  .hgtags  .travis.yml  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  sseclient.py  test_sseclient.py
filigran_sseclient/: __init__.py  sseclient.py
sseclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_sseclient.py
