[metadata]
name = filigran_sseclient
version = attr: filigran_sseclient.__version__
author = Filigran
author_email = contact@filigran.io
maintainer = Filigran
url = https://github.com/FiligranHQ/filigran-sseclient
description = Python API client for OpenCTI.
long_description = file: README.md
long_description_content_type = text/markdown
license = Copyright (c) 2015 Brent Tubbs
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages =
    filigran_sseclient
include_package_data = True
install_requires =
    requests>=2.9
    six

[options.extras_require]
dev =
    black~=23.1.0
    build~=0.8.0
    isort~=5.10.1
    types-pytz~=2022.2.1.0
    pre-commit~=2.20.0
    pytest-cases~=3.6.13
    pytest-cov~=3.0.0
    pytest_randomly~=3.12.0
    pytest~=7.1.2
    types-python-dateutil~=2.8.19
    wheel~=0.37.1
doc =
    autoapi~=2.0.1
    sphinx-autodoc-typehints~=1.19.2
    sphinx-rtd-theme~=1.0.0
